# aqsana_kz

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
accounts/: urls.py  views.py
converter/: admin.py  ai.py  forms.py  models.py  predict.py  rates_service.py  urls.py  utils.py  views.py
converter/migrations/: 0001_initial.py  0002_favoritecurrency.py  0003_favoriteconversiondirection_delete_favoritecurrency.py  0004_alter_conversionhistory_options_and_more.py  0005_remove_conversionhistory_updated_at.py
converter/templates/: base.html  convert.html
core/: settings.py  urls.py
templates/: base.html  conversion_history.html  convert.html  login.html  logout.html  signup.html
