[project]
name = "aqsana-kz"
version = "0.1.0"
description = "AI convert KZT"
authors = [
    {name = "Baglan",email = "or.baglane@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "openai (>=1.70.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
